// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders loading version 1`] = `
<div>
  <Meta
    image="//s3.amazonaws.com/ns.assets/apollos/you_cant_outgive_god2x1.jpg"
    title="Give"
  />
  <div
    className="soft-double-sides@lap-and-up soft-ends@anchored soft background--light-primary"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <div
      className="text-left soft-top@anchored hard-left@lap-and-up soft-half-bottom soft@anchored "
    >
      <div
        className="soft-double-ends@palm-wide-and-up soft-ends@palm"
      >
        <div
          className="one-whole text-center soft-ends"
        >
          <Spinner
            styles={
              Object {
                "height": "40px",
                "width": "40px",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="soft-half soft-sides@portable soft-double-sides@anchored"
  >
    <h4
      className="soft soft-double-ends text-center@lap-and-up flush-bottom"
    >
      Learn more about our campaigns...
    </h4>
    <div
      className="grid"
    >
      <div
        className="one-whole text-center soft-ends"
      >
        <Spinner
          styles={
            Object {
              "height": "40px",
              "width": "40px",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders not alive version 1`] = `
<div>
  <Meta
    image="//s3.amazonaws.com/ns.assets/apollos/you_cant_outgive_god2x1.jpg"
    title="Give"
  />
  <div
    className="soft-double-sides@lap-and-up soft-ends@anchored soft background--light-primary"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <div
      className="text-left soft-top@anchored hard-left@lap-and-up soft-half-bottom soft@anchored "
    >
      <div
        className="soft-double-ends@palm-wide-and-up soft-ends@palm"
      >
        <Offline />
      </div>
    </div>
  </div>
  <div
    className="soft-half soft-sides@portable soft-double-sides@anchored"
  >
    <h4
      className="soft soft-double-ends text-center@lap-and-up flush-bottom"
    >
      Learn more about our campaigns...
    </h4>
    <div
      className="grid"
    >
      <div
        className="grid__item one-whole push-half-bottom flush-bottom@handheld hard-bottom"
        key="0"
      >
        <Card
          fallbackImage={null}
          images={Array []}
          link="/give/campaign/test"
        />
      </div>
      <div
        className="grid__item one-whole push-half-bottom flush-bottom@handheld hard-bottom"
        key="1"
      >
        <Card
          fallbackImage={null}
          images={Array []}
          link="/give/campaign/test"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with props 1`] = `
<div>
  <Meta
    image="//s3.amazonaws.com/ns.assets/apollos/you_cant_outgive_god2x1.jpg"
    title="Give"
  />
  <div
    className="soft-double-sides@lap-and-up soft-ends@anchored soft background--light-primary"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <div
      className="text-left soft-top@anchored hard-left@lap-and-up soft-half-bottom soft@anchored "
    >
      <div
        className="soft-double-ends@palm-wide-and-up soft-ends@palm"
      >
        <Connect(CartContainer)
          accounts={
            Array [
              Object {
                "image": null,
                "images": Array [],
                "name": "test",
                "summary": "test summary",
              },
              Object {
                "image": null,
                "images": Array [],
                "name": "test",
                "summary": "test summary",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
  <div
    className="soft-half soft-sides@portable soft-double-sides@anchored"
  >
    <h4
      className="soft soft-double-ends text-center@lap-and-up flush-bottom"
    >
      Learn more about our campaigns...
    </h4>
    <div
      className="grid"
    >
      <div
        className="grid__item one-whole push-half-bottom flush-bottom@handheld hard-bottom"
        key="0"
      >
        <Card
          fallbackImage={null}
          images={Array []}
          link="/give/campaign/test"
        />
      </div>
      <div
        className="grid__item one-whole push-half-bottom flush-bottom@handheld hard-bottom"
        key="1"
      >
        <Card
          fallbackImage={null}
          images={Array []}
          link="/give/campaign/test"
        />
      </div>
    </div>
  </div>
</div>
`;
